tests/NormalTests/paczka1/small_fuzzy/30223237.err
Error in line 4: NXplBLwQ A748 94,2
Error in line 11: pOF A748 93,9
